--- a/package.json
+++ b/package.json
@@ -383,6 +383,7 @@
     "locate-path": "^5.0.0",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.isfinite": "^3.3.2",
     "logalot": "^2.1.0",
     "longest": "^1.0.1",
